[gd_scene load_steps=2 format=3 uid="uid://b6onryltdkc5y"]

[ext_resource type="Script" uid="uid://p6bx2v3uff80" path="res://scripts/multiplayer_menu.gd" id="1_nlcmr"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nlcmr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -27.5
offset_right = 34.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
text = "Join"

[node name="IPLineEdit" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "Enter Host IP"
